<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/layout_border"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/layout_border"
                android:src="@drawable/people_fill" />

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="300dp"
                    android:layout_height="1dp"
                    android:background="@color/Spaire" />

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="人员："
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_name"
                        android:layout_width="240dp"
                        android:layout_height="40dp"
                        android:gravity="center|left"
                        android:textColor="@color/black"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="60dp"
                        android:layout_height="40dp"
                        android:gravity="center"
                        android:text="状态："
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/text_condition"
                        android:layout_width="240dp"
                        android:layout_height="40dp"
                        android:gravity="center|left"
                        android:textColor="@color/green"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@drawable/divider_vertical"
                android:showDividers="middle">

                <LinearLayout
                    android:id="@+id/upload"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/log"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/upload"
                        android:onClick="uploadPicture" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/upload_picture"
                        android:textAlignment="center" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/log"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/upload"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_gravity="center"
                        android:background="@drawable/log"
                        android:onClick="viewLog" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/health_log"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_title_recommend"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/image"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:scaleType="centerCrop"
                            android:src="@drawable/recommend" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/image"
                            android:layout_centerHorizontal="true"
                            android:padding="8dp"
                            android:text="新冠肺炎疫情全球爆发" />
                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_risk_assess"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="当前新冠肺炎检测呈阳性，患病风险：" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="极高"
                            android:textColor="@color/colorAccent" />
                    </LinearLayout>

                </android.support.v7.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_health_advice"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    app:cardBackgroundColor="@color/card_background"
                    app:cardCornerRadius="8dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                style="@style/TextAppearance.AppCompat.Subhead"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="您当前患病风险较高，推荐您：" />

                            <TextView
                                style="@style/TextAppearance.AppCompat.Subhead"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="8dp"
                                android:text="及时去医院就医"
                                android:textColor="@color/btn" />
                        </LinearLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
